chore: fix test

--- a/test/fixtures/post-deploy/bella-tank.html
+++ b/test/fixtures/post-deploy/bella-tank.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg">
   <meta property="og:image:secure_url" content="https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg">
   <meta property="og:type" content="product">
+  <meta name="image" content="https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Bella Tank">
   <meta name="twitter:image" content="https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg">
