--- a/test/fixtures/post-deploy/bella-tank.html
+++ b/test/fixtures/post-deploy/bella-tank.html
@@ -36,6 +36,7 @@
       "@context": "http://schema.org",
       "@type": "Product",
       "@id": "https://example.test/products/bella-tank/wt01",
+      "url": "https://example.test/products/bella-tank/wt01",
       "name": "Bella Tank",
       "sku": "WT01",
       "description": "",
