Fix post deploy test

--- a/test/fixtures/post-deploy/bella-tank.html
+++ b/test/fixtures/post-deploy/bella-tank.html
@@ -28,7 +28,7 @@
   <script src="/scripts/aem.js" type="module"></script>
   <script src="/scripts/scripts.js" type="module"></script>
   <link rel="stylesheet" href="/styles/styles.css">
-  <script type="application/ld+json">
+  <script type="application/ld+json" data-name="product">
       {
       "@context": "http://schema.org",
       "@type": "Product",
@@ -276,41 +276,46 @@
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzU1Ni81MjM=</div>
           <div>XS</div>
-          <div></div>
+          <div>XS</div>
           <div></div>
           <div>inStock</div>
+          <div>TEXT</div>
         </div>
         <div>
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzU1Ni81MjY=</div>
           <div>S</div>
-          <div></div>
+          <div>S</div>
           <div></div>
           <div>inStock</div>
+          <div>TEXT</div>
         </div>
         <div>
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzU1Ni81Mjk=</div>
           <div>M</div>
-          <div></div>
+          <div>M</div>
           <div></div>
           <div>inStock</div>
+          <div>TEXT</div>
         </div>
         <div>
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzU1Ni81MzI=</div>
           <div>L</div>
-          <div></div>
+          <div>L</div>
           <div></div>
           <div>inStock</div>
+          <div>TEXT</div>
         </div>
         <div>
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzU1Ni81MzU=</div>
           <div>XL</div>
-          <div></div>
+          <div>XL</div>
           <div></div>
           <div>inStock</div>
+          <div>TEXT</div>
         </div>
         <div>
           <div>color</div>
@@ -324,25 +329,28 @@
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzI3Ny8xNzI=</div>
           <div>Black</div>
-          <div></div>
+          <div>#000000</div>
           <div></div>
           <div>inStock</div>
+          <div>COLOR_HEX</div>
         </div>
         <div>
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzI3Ny8xNzU=</div>
           <div>Blue</div>
-          <div></div>
+          <div>#1857f7</div>
           <div></div>
           <div>inStock</div>
+          <div>COLOR_HEX</div>
         </div>
         <div>
           <div>option</div>
           <div>Y29uZmlndXJhYmxlLzI3Ny8xOTM=</div>
           <div>Orange</div>
-          <div></div>
+          <div>#eb6703</div>
           <div></div>
           <div>inStock</div>
+          <div>COLOR_HEX</div>
         </div>
       </div>
       <div class="product-variants">
