chore: fix tests

--- a/test/fixtures/post-deploy/bella-tank.html
+++ b/test/fixtures/post-deploy/bella-tank.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Bella Tank</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="description" content="">
+  <meta name="description" content="">
 
   <meta property="og:title" content="Bella Tank">
   <meta property="og:type" content="product">
