fix: post deploy

--- a/test/fixtures/post-deploy/bella-tank.html
+++ b/test/fixtures/post-deploy/bella-tank.html
@@ -44,6 +44,7 @@
           "sku": "WT01-L-Black",
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzI%3D%2CY29uZmlndXJhYmxlLzU1Ni81MzI%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-black_main_1.jpg",
+          "name": "Bella Tank-L-Black",
           "availability": "InStock",
           "price": 29,
           "priceCurrency": "USD"
@@ -54,6 +55,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzU%3D%2CY29uZmlndXJhYmxlLzU1Ni81MzI%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-L-Blue",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -63,6 +65,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xOTM%3D%2CY29uZmlndXJhYmxlLzU1Ni81MzI%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-orange_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-L-Orange",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -72,6 +75,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzI%3D%2CY29uZmlndXJhYmxlLzU1Ni81Mjk%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-black_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-M-Black",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -81,6 +85,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzU%3D%2CY29uZmlndXJhYmxlLzU1Ni81Mjk%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-M-Blue",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -90,6 +95,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xOTM%3D%2CY29uZmlndXJhYmxlLzU1Ni81Mjk%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-orange_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-M-Orange",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -99,6 +105,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzI%3D%2CY29uZmlndXJhYmxlLzU1Ni81MjY%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-black_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-S-Black",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -108,6 +115,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzU%3D%2CY29uZmlndXJhYmxlLzU1Ni81MjY%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-S-Blue",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -117,6 +125,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xOTM%3D%2CY29uZmlndXJhYmxlLzU1Ni81MjY%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-orange_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-S-Orange",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -126,6 +135,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzI%3D%2CY29uZmlndXJhYmxlLzU1Ni81MzU%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-black_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-XL-Black",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -135,6 +145,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzU%3D%2CY29uZmlndXJhYmxlLzU1Ni81MzU%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-XL-Blue",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -144,6 +155,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xOTM%3D%2CY29uZmlndXJhYmxlLzU1Ni81MzU%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-orange_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-XL-Orange",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -153,6 +165,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzI%3D%2CY29uZmlndXJhYmxlLzU1Ni81MjM%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-black_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-XS-Black",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -162,6 +175,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xNzU%3D%2CY29uZmlndXJhYmxlLzU1Ni81MjM%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-blue_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-XS-Blue",
           "price": 29,
           "priceCurrency": "USD"
         },
@@ -171,6 +185,7 @@
           "url": "https://example.test/products/bella-tank/wt01?optionsUIDs=Y29uZmlndXJhYmxlLzI3Ny8xOTM%3D%2CY29uZmlndXJhYmxlLzU1Ni81MjM%3D",
           "image": "https://www.aemshop.net/media/catalog/product/w/t/wt01-orange_main_1.jpg",
           "availability": "InStock",
+          "name": "Bella Tank-XS-Orange",
           "price": 29,
           "priceCurrency": "USD"
         }
