chore: fix postdeploy test

--- a/test/fixtures/post-deploy/productbus-test--test-key.html
+++ b/test/fixtures/post-deploy/productbus-test--test-key.html
@@ -2,26 +2,26 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Product meta title</title>
+    <title>Product | Meta Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="my meta description">
     <meta name="sku" content="FULL-PROD">
     <meta name="image" content="./media_aededbbdb4afdaa30e955463c82e281a6369b9a2.webp">
     <meta property="og:image" content="./media_aededbbdb4afdaa30e955463c82e281a6369b9a2.webp">
-    <meta property="og:title" content="Product meta title">
+    <meta property="og:title" content="Product | Meta Title">
     <meta property="og:description" content="my meta description">
     <meta property="og:type" content="product">
     <meta property="product:availability" content="InStock">
     <meta property="product:price" content="4">
     <meta property="product:price.regular" content="5">
     <meta property="product:price.currency" content="USD">
-    <script type="application/ld+json">
+        <script type="application/ld+json">
 {
   "@context": "http://schema.org",
   "@type": "Product",
   "@id": "https://main--productbus-test--maxakuru.aem.page/products/test-key",
   "url": "https://main--productbus-test--maxakuru.aem.page/products/test-key",
-  "name": "My Product Title",
+  "name": "Product Name",
   "sku": "FULL-PROD",
   "description": "my meta description",
   "image": "./media_aededbbdb4afdaa30e955463c82e281a6369b9a2.webp",
@@ -41,9 +41,7 @@
     {
       "@type": "Offer",
       "sku": "FULL-PROD-1",
-      "name": "My Product V1",
       "url": "https://main--productbus-test--maxakuru.aem.page/products/test-key?sku=FULL-PROD-1",
-      "image": "./media_aededbbdb4afdaa30e955463c82e281a6369b9a2.webp",
       "availability": "InStock",
       "price": "4",
       "priceCurrency": "USD"
@@ -51,9 +49,7 @@
     {
       "@type": "Offer",
       "sku": "FULL-PROD-2",
-      "name": "My Product V2",
       "url": "https://main--productbus-test--maxakuru.aem.page/products/test-key?sku=FULL-PROD-2",
-      "image": "./media_414829a66c036d131df13002198714ffff1539ca.jpg",
       "availability": "InStock",
       "price": "5",
       "priceCurrency": "USD"
