fix: post deploy

--- a/test/fixtures/post-deploy/productbus-test--test-key.html
+++ b/test/fixtures/post-deploy/productbus-test--test-key.html
@@ -62,7 +62,7 @@
     <header></header>
     <main>
       <div>
-        <h1>My Product Title</h1>
+        <h1>Product Name</h1>
         <p>my description</p>
         <p>
           <picture>
